# telegraph-api

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  python-app.yml  python-publish.yml  test.yml
telegraph_api/: __init__.py  exc.py
telegraph_api/abstract/: __init__.py  account.py  interface.py  page.py
telegraph_api/client/: __init__.py  _client.py
telegraph_api/core/: _http.py
telegraph_api/entities/create/: __init__.py  account.py  page.py
telegraph_api/entities/models/: __init__.py  account.py  node.py  page.py  response.py
telegraph_api/entities/work/: __init__.py  account.py
test/: test_client.py  test_new.py
