[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api-telegraph"
version = "1.0.0"
description = "Python SDK for Telegraph (telegra.ph) API with sync and async support"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Game Hipe", email = "alikegorplay@gmail.com" }
]
maintainers = [
    { name = "Game Hipe", email = "alikegorplay@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

keywords = ["telegraph", "api", "client", "sdk", "async", "sync", "web scraping", "html parser"]
requires-python = ">=3.9"

dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "mypy",
    "ruff",
    "types-beautifulsoup4",
]

[project.urls]
Homepage = "https://github.com/game-hipe/telegraph-api"
Repository = "https://github.com/game-hipe/telegraph-api"
Documentation = "https://github.com/game-hipe/telegraph-api#readme"
Issues = "https://github.com/game-hipe/telegraph-api/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["telegraph_api*"]

# Необязательно: если у тебя есть __init__.py в папках, это сработает
# Если структура: telegraph_api/client/, telegraph_api/entities/ и т.д. — всё будет найдено

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
]
ignore = []

[tool.mypy]
mypy_path = ["."]
python_version = "3.9"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = false

[[tool.mypy.overrides]]
module = [
    "bs4",
    "httpx",
    "pydantic.*",
]
ignore_missing_imports = true